--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,42 @@ a {
     align-items: center;
     justify-content: center;
 }
+.cortes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+    list-style-type: none;
+}
+
+.cortes ol {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.cortes li {
+    margin: 15px;
+    text-align: center;
+}
+
+.cortes img {
+    border: solid 10px rgb(255, 207, 2);
+    border-radius: 20px;
+}
+
+
+
+
+
+
+
+
+
+
 
 main {
     padding: 2rem;
@@ -97,16 +133,6 @@ form button {
 
 form button:hover {
     background-color: #555;
-}
-
-footer {
-    background-color: #000000;
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
 
 
