--- a/programacao.css
+++ b/programacao.css
@@ -74,6 +74,7 @@ a {
     line-height: 1.6; 
 }
 
+
 .container-center p {
     max-width: 200%; 
     margin: 20px;
@@ -85,20 +86,21 @@ a {
     text-align: justify; 
 }
 
+
 #logo_entec2024 {
     float: right; 
     width: 50%; 
     max-height: 300px; 
     margin-left: 10px; 
     border-radius: 50%; 
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
 .container-center {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 20px;
+    justify-content: space-between; 
+    align-items: flex-start; 
+    gap: 20px; 
     flex-wrap: wrap; 
 }
 
@@ -107,8 +109,9 @@ a {
 }
 
 .container-img {
-    flex: 0 0 auto; 
+    flex: 0 0 auto;
 }
+
 
 .container-img img {
     margin: 30px;
@@ -159,8 +162,45 @@ a {
 }
 
 .carousel-item img.custom-image {
-    max-height: 1000px;
-    object-fit: contain; 
+    border-radius: 30px;
+    max-height: 1000px; 
+    object-fit: contain;
     margin: auto;
 }
 
+.footer-item {
+    padding: 20px;
+}
+
+footer {
+    margin-top: 30px ;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around; 
+    align-items: flex-start; 
+    padding: 10px;
+    background-color: rgb(104, 10, 122)
+}
+
+.footer-item {
+    border-radius: 30px;
+    background-color:rgb(0, 0, 0);
+    text-align: center; 
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+}
+
+.footer-item img {
+    margin-top: 10px;
+}
+
+.footer-item a {
+    margin-top: 5px;
+    color: #007BFF; 
+    text-decoration: none;
+}
+
+.footer-item a:hover {
+    text-decoration: underline;
+}
